# SLIC_superpixel_cpp

./: .gitignore  CMakeLists.txt  README.md  SLIC_parallel.cpp  SLIC_parallel.h  SLIC_sequential.cpp  SLIC_sequential.h  common.cpp  common.h  main-v1.cpp  main.cpp  run-configurations.cpp
v1/: main-v1.cpp
v2/: SLIC_parallel.cpp  SLIC_parallel.h  SLIC_sequential.cpp  SLIC_sequential.h  common.cpp  common.h  run-configurations.cpp
v3/: SLIC_parallel.cpp  SLIC_parallel.h  SLIC_sequential.cpp  SLIC_sequential.h  common.h  run-configurations.cpp
v4/: SLIC_parallel.cpp  SLIC_parallel.h  SLIC_sequential.cpp  SLIC_sequential.h  SLIC_tile.cpp  SLIC_tile.h  common.cpp  common.h  output_checker.cpp  run-configurations.cpp
